Squid egress in functional state
